# ead-ccf-revolving-credit

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: INTERNSHIP_GUIDE.md
scripts/: train.py
src/ead_ccf/: __init__.py  data.py  evaluate.py  features.py  model.py  predict.py
tests/: test_model.py
