[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ead-ccf-model"
version = "0.1.0"
description = "EAD with Credit Conversion Factor for Revolving Credit"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
